--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <center>
     <h2>fake data  api create a card by using the async and await to display the cards .</h2><br><br><br>
     <div id="api">
-        <button id="recipesData">Recipes with cards</button>
-        <button id="DummyData"> Dummy Data</button>
-        <button id="fakeStore">fake store api </button>
-        <button id="categoryData">Dummy data mobile with cards</button
+        <button id="recipesData">Recipes with cards</button><br><br>
+        <button id="DummyData"> Dummy Data</button><br><br>
+        <button id="fakeStore">fake store api </button><br><br>
+        <button id="categoryData">Dummy data mobile with cards</button><br><br>
     </div> 
 </center>
     <div id="container"></div>
