--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <center>
-    <h2>fake data  api create a card by using the async and await to display the cards .</h2><br><br><br>
+    <h2>fake data  api create a card by using the async and await to display the cards .</h2><center>
+        <center>
     <div id="api">
         <button id="recipesData">Recipes with cards</button><br><br><br><br><br>
         <button id="DummyData"> Dummy Data</button><br><br><br><br><br>
